--- a/wangyiyouxi.html
+++ b/wangyiyouxi.html
@@ -26,7 +26,7 @@
                     <img src="img/1.png" alt="" class="logoright">
                 </li>
                 <li><a href="login.html"  class="memberusername" >注册账号</a></li>
-                <li><a href="#"  class="loginReg" >登陆</a></li>
+                <li><a href="login.html"  class="loginReg" >登陆</a></li>
                 <li><a href="#">账卡充值</a></li>
                 <li>
                     <a href="#">网易游戏全目录</a>
